efk-chart/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: efk
  labels:
    istio-injection: enabled
