efk-chart/templates/efk-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: efk-app
    namespace: efk
    labels:
      app: efk-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: efk-app
  template:
    metadata:
      labels:
        app: efk-app
    spec:
      containers:
        - name: efk-app
          image: polasomeshwar/platform_logging:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
