efk-chart/templates/fluentd.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: efk
spec:
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      labels:
        app: fluentd
    spec:
      containers:
        - name: fluentd
          image: fluent/fluentd-kubernetes-daemonset:v1.16-debian-elasticsearch8-1
          volumeMounts:
            - name: config-volume
              mountPath: /fluentd/etc/
      volumes:
        - name: config-volume
          configMap:
            name: fluentd-config
