efk-chart/templates/elasticsearch_service.yaml
apiVersion: v1
kind: Service
metadata:
    name: elasticsearch
    namespace: efk
spec:
  type: NodePort
  selector:
    app: elasticsearch
  ports:
    - port: 9200
      targetPort: 9200
