efk-chart/templates/fluentd_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fluent-service
  namespace: efk
spec:
  type: NodePort
  selector:
    app: fluentd
  ports:
    - protocol: TCP
      port: 24224
      targetPort: 24224
